Fix calculator screen overflow with box-sizing and overflow hidden

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 .calculator-screen {
@@ -18,6 +20,7 @@
     text-align: right;
     padding-right: 20px;
     padding-left: 10px;
+    box-sizing: border-box;
 }
 
 button {
